# construction-qa-ai-

./: README.md  setup-macos.sh  setup-windows.bat
api/: README.md  __init__.py  main.py  pyproject.toml  requirements.txt
api/core/: settings.py
api/db/: init_db.py  run_migrations.py  schema.sql
api/db/migrations/: 004_add_chunk_source_conf.sql  005_conversations.sql  007_toc.sql  011_unstructured_rows.sql  012_visual_content.sql
api/ingest/: __init__.py  chunker.py  indexer.py  ocr.py  pdf_extractor.py  pymupdf_table_parser.py  table_indexer.py  toc_parser.py  unstructured_pdf.py  unstructured_processor.py  vision_parser.py  vision_processor.py  visual_content_indexer.py
api/llm/: __init__.py  chat.py  embeddings.py  query_embed.py  vision_client.py
api/qa/: qa_service.py  synth.py
api/search/: create_index.py  create_table_index.py  dev_seed.py  hybrid.py  opensearch_client.py  query_suggestions.py  reranker.py  router.py  table_search.py
app/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
app/app/: globals.css  layout.tsx  page.tsx
app/app/chat/: page.tsx
app/app/dashboard/: page.tsx  page.tsx.broken
app/app/search/: page.tsx
app/app/viewer/: page.tsx
app/components/: Chat.tsx  LoadingWrapper.tsx  Message.tsx  NotificationBell.tsx  NotificationBell.tsx.broken  PDFViewer.tsx  Sidebar.tsx
app/lib/: api.ts  env.ts  notifications.ts  types.ts
infra/: docker-compose.yml
